:sparkles: feat:criando primeiras rotas de controle de vendas
