# src/swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "API PixelCoffee",
     "description": "Api feita para o projeto PixelCoffee",
-    "version": "1.2.0"
+    "version": "1.3.0"
   },
   "servers": [
     {
@@ -12,7 +12,8 @@
     }
   ], 
   "tags": [
-    {"name": "menu"}
+    {"name": "menu"},
+    {"name": "sales"}
   ],
   "paths": {
     "/menu/coffees": {
@@ -95,6 +96,31 @@
           }
         }
       }
+    },
+    "/sales-control/takeout/orders": {
+      "get": {
+        "summary": "mostra todos os pedidos para viajem",
+        "tags": ["sales"]
+      }
+    },
+    "/sales-control/table/orders": {
+      "get": {
+        "summary": "mostra todos os pedidos para mesas",
+        "tags": ["sales"]
+      }
+    },
+    "/takeout/was-paid/:id": {
+      "delete": {
+        "summary": "deleta o pedido para viajem",
+        "tags": ["sales"]
+      }
+    },
+    "/table/was-paid/:id": {
+      "delete": {
+        "summary": "deleta um pedido para mesa",
+        "tags": ["sales"]
+      }
     }
+
   }
 }
